tests/characterization/snapshots/characterization__command_help__manager_uninstall.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager uninstall <version|branch:<branch>>
--- stderr ---
--- end ---
